<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Example6.Fragments</string>
    <string name="action_settings">Settings</string>

    <!-- Main Activity -->
    <string name="buttonDualPaneStaticLayout">Dual Pane Static Layout</string>
    <string name="buttonDualPaneProgrammaticLayout">Dual Pane Programmatic Layout</string>
    <string name="buttonDynamicLayout">Dynamic Layout</string>
    <string name="buttonDynamicConfigChangeLayout">Dynamic Config Change Layout</string>
    <string name="buttonNoLayout">No Layout</string>

    <!-- Static Fragment Layout -->
    <string name="title_activity_dual_pane_static_layout">Dual Pane Static Layout</string>

    <!-- Programmatic Fragment Layout -->
    <string name="title_activity_dual_pane_programmatic_layout">Dual Pane Programmatic Layout</string>

    <!-- Dynamic Fragment Layout -->
    <string name="title_activity_dynamic_layout">Dynamic Layout</string>

    <!-- Dyanmic Config Change Layout -->
    <string name="title_activity_dynamic_config_change_layout">Dynamic Config Change Layout</string>
    
    <!-- No Layout -->
    <string name="title_activity_no_layout">No Layout</string>
    <string name="counter">0</string>
    <string name="buttonStart">Start</string>

    <!-- Values -->
    <string-array name="arrayListClasses">
        <item>CS150</item>
        <item>CS250</item>
        <item>CS251</item>
        <item>CS300</item>
        <item>CS492</item>
    </string-array>
    <string-array name="arrayListClassDescription">
        <item>Computer Science I</item>
        <item>Computer Science II</item>
        <item>Finite Structures</item>
        <item>Data Structures</item>
        <item>Mobile Computing</item>
    </string-array>
    
</resources>
