<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActivityMain" >

    <Button
        android:id="@+id/buttonDualPaneStaticLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/buttonDualPaneStaticLayout" />

    <Button
        android:id="@+id/buttonDualPaneProgrammaticLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonDualPaneStaticLayout"
        android:layout_below="@+id/buttonDualPaneStaticLayout"
        android:text="@string/buttonDualPaneProgrammaticLayout" />

    <Button
        android:id="@+id/buttonDynamicLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonDualPaneProgrammaticLayout"
        android:layout_below="@+id/buttonDualPaneProgrammaticLayout"
        android:text="@string/buttonDynamicLayout" />
    
    <Button
        android:id="@+id/buttonDynamicConfigChangeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonDynamicLayout"
        android:layout_below="@+id/buttonDynamicLayout"
        android:text="@string/buttonDynamicConfigChangeLayout" />
    
    <Button
        android:id="@+id/buttonNoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonDynamicConfigChangeLayout"
        android:layout_below="@+id/buttonDynamicConfigChangeLayout"
        android:text="@string/buttonNoLayout" />

</RelativeLayout>
